syntax = "proto3";
package io.harness.eventsframework.schemas.entitysetupusage;

import "io/harness/eventsframework/schemas/entity/entity_detail.proto";

option java_multiple_files = true;
option go_package = "950_events_api_proto";

message EntitySetupUsageCreateV2DTO {
  string accountIdentifier = 1;
  repeated io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredEntities = 2;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredByEntity = 3;
  int64 createdAt = 4;
  bool deleteOldReferredByRecords = 5;
}